Updated message preventing admin use on mobile to a higher zindex to ensure render over other page elements in certain contexts

--- a/app/admin/layout.module.css
+++ b/app/admin/layout.module.css
@@ -18,7 +18,7 @@
     color: white;
     text-align: center;
     padding: 1rem;
-    z-index: 1000;
+    z-index: 3000;
     /* border: solid red 2px; */
   }
   .mobileSupportMessageWrapper p {
